# HumanCompiler

./: .env.example  .gitignore  .pre-commit-config.yaml  .spdx-header-python.txt  .spdx-header-typescript.txt  CI-CD-SETUP.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB-SECRETS-GUIDE.md  LICENSE  README.md  SECURITY.md  SUPABASE_SETTINGS.md  SUPABASE_SETUP.md  SUPABASE_SETUP_GUIDE.md  add_memo_column.sql  add_memo_index.sql  backup_deployment_guide.md  create_tables.py  local_backup_guide.md  openai_api.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  vercel.json  verify-csp.sh
apps/api/: .coverage  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  README.md  ai_service.py  auth.py  bandit-report.json  base_service.py  config.py  conftest.py  create_tables.py  database.py  debug_weekly_schedule.py  exceptions.py  fly.preview.toml  fly.toml  main.py  migrate.py  models.py  package.json  performance_optimization.md  production_migration_simple.py  pyproject.toml  requirements.txt  run.py  run_migrations.py  safe_production_migration.py  services.py  services_refactored.py  setup.py  test_flexible_weekly_search.py
apps/api/ai/: __init__.py  context_collector.py  models.py  openai_client.py  planning_service.py
apps/api/backups/: test_backup.json
apps/api/common/: __init__.py  error_handlers.py
apps/api/migrations/: 001_add_cascade_delete.sql  001_initial_schema.sql  002_add_user_settings_and_api_usage.sql  002_fix_search_path_security.sql  003_add_performance_indexes.sql  003_add_performance_indexes_rollback.sql  004_add_task_dependencies.sql  005_add_weekly_schedules.sql  006_add_goal_status.sql  006_drop_api_usage_logs.sql  007_add_work_sessions.sql  008_add_priority_column.sql  009_add_project_status.sql  010_add_push_subscriptions.sql  011_add_notification_fields.sql  012_fix_push_subscriptions_rls.sql  013_fix_snooze_count_constraint.sql  014_add_work_session_pause_resume.sql  015_add_reschedule_tables.sql  016_add_context_notes.sql  016_rollback_context_notes.sql  017_add_context_notes_simple.sql  018_add_quick_tasks.sql  018_add_quick_tasks_rollback.sql  019_add_email_notifications.sql  020_add_manual_execution_field.sql  021_add_slot_templates.sql  022_add_capacity_triage.sql  022_add_capacity_triage_rollback.sql  023_update_default_openai_model_gpt55.sql  README.md  add_composite_sort_indexes.sql  enable_rls_security.sql
apps/api/migrations/archive/: apply_sort_indexes.py
apps/api/routers/: ai_planning.py  goals.py  projects.py  scheduler.py  tasks.py  users.py
apps/api/scripts/: setup-preview-env.sh
apps/api/src/: migrate_add_status.py  production_migration.py
apps/api/src/core/: __init__.py  cache.py
apps/api/src/humancompiler_api/: add_project_status_migration.py  ai_service.py  auth.py  base_service.py  config.py  crypto.py  database.py  database_config.py  email_service.py  enable_rls_migration.py  exceptions.py  main.py  migration_manager.py  models.py  notification_service.py  performance_monitor.py  production_migration.py  rate_limiter.py  reschedule_service.py  safe_migration.py  services.py  simple_backup.py
apps/api/src/humancompiler_api/ai/: __init__.py  analysis_cache.py  context_collector.py  goal_task_drafts.py  models.py  openai_client.py  planning_service.py  prompts.py  report_generator.py  task_utils.py  types.py  weekly_task_solver.py
apps/api/src/humancompiler_api/common/: __init__.py  error_handlers.py
apps/api/src/humancompiler_api/dev_tools/: __init__.py  scheduler_fixture_export.py
apps/api/src/humancompiler_api/migrations/: remove_unscheduled_tasks_from_schedules.py
apps/api/src/humancompiler_api/routers/: __init__.py  ai_planning.py  data_export.py  goal_dependencies.py  goals.py  logs.py  monitoring.py  notes.py  notifications.py  progress.py  projects.py  quick_tasks.py  reports.py  reschedule.py  scheduler.py  simple_backup_api.py  slot_templates.py  task_dependencies.py  tasks.py  timeline.py  triage.py  user_settings.py  users.py  websocket.py  weekly_recurring_tasks.py  weekly_schedule.py  work_sessions.py
apps/api/src/humancompiler_api/scheduler/: __init__.py  notification_scheduler.py
apps/api/src/humancompiler_api/triage/: __init__.py  service.py
apps/api/src/humancompiler_optimizer/: __init__.py  daily.py  weekly.py
apps/api/src/taskagent_api/: ai_service.py  auth.py  backup_scheduler.py  base_service.py  config.py  crypto.py  database.py  database_config.py  enable_rls_migration.py  exceptions.py  main.py  migration_manager.py  migrations.py  models.py  performance_monitor.py  production_migration.py  rate_limiter.py  safe_migration.py  services.py  simple_backup.py
apps/api/src/taskagent_api/ai/: __init__.py  analysis_cache.py  context_collector.py  models.py  openai_client.py  planning_service.py  prompts.py  report_generator.py  task_utils.py  weekly_task_solver.py
apps/api/src/taskagent_api/common/: __init__.py  error_handlers.py
apps/api/tests/: __init__.py  test_ai_planning_router.py  test_ai_services.py  test_api.py  test_app_startup.py  test_auth.py  test_backup_scheduler.py  test_base_service.py  test_cache.py  test_data_export.py  test_dependency_cycle_detection.py  test_error_handlers.py  test_goal_status.py  test_goal_task_drafts.py  test_humancompiler_optimizer.py  test_log_service_batch.py  test_main.py  test_migration_manager.py  test_optimization_pipeline.py  test_project_performance.py  test_projects_router.py  test_scheduler.py  test_scheduler_dependencies.py  test_scheduler_fixture_export.py  test_scheduler_remaining_hours.py  test_simple_backup.py  test_simple_backup_api.py  test_slot_templates.py  test_task_deletion.py  test_task_pagination_sorting.py  test_task_update_clears_optional_fields.py  test_task_utils.py  test_tasks_router.py  test_timeline_router.py  test_triage_router.py  test_triage_service.py  test_two_stage_optimization.py  test_weekly_recurring_tasks.py  test_weekly_reports.py  test_weekly_schedule_non_monday.py  (+8 more)
supabase/: config.toml
(+459 files in other folders)
